--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <script src="clicktheface.js"></script>
 <h2 onClick="youWin();">Click the bobblehead</h2><br>
-<img src="example_bobblehead.png" height=200px onClick="doClick();"><br>
+<img src="http://u.cubeupload.com/Elliot/examplebobblehead.png" height=200px onClick="doClick();"><br>
 <p>Score: </p><p id="scoretext">0</p><br><br>
 </body>
 </html>
