--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function youWin() {  // Secret: Win the game
 //  document.getElementById("scoretext").innerHTML = score;
 //}
 // Initializer
-function initAll(picname, scorename="Score: ", width=200) {
+function initAll() {
   var x = document.createElement("IMG");
   x.setAttribute("src", "http://u.cubeupload.com/Elliot/examplebobblehead.png");
   x.setAttribute("width", width);
