--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function youWin() {  // Secret: Win the game
 function initAll() {
   var x = document.createElement("IMG");
   x.setAttribute("src", "http://u.cubeupload.com/Elliot/examplebobblehead.png");
-  x.setAttribute("width", width);
+  x.setAttribute("width", 200);
   x.setAttribute("onClick", "doClick()");
   document.body.appendChild(x);
   var y = document.createElement("P");
