--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
 <script>
+var audio = new Audio('https://dl.dropboxusercontent.com/content_link/3UaLP4Z6IzeqVK1lf4sDI26dQssf123dQJQFu5Ycev3N2jAvgPIoiBoMWbZua0TD/file');
 var score = 0;
 // Game function
 function doClick() {  // When you click the picture
